--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    useLibrary 'org.apache.http.legacy'
+
 }
 
 dependencies {
@@ -26,10 +28,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
-    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.3.0'
-    implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.3.0'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-
-
+    implementation 'commons-lang:commons-lang:2.6'
 }
